.metals/metals.log
INFO  time: initialize in 1.89s
WARN  no build target: /home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala
INFO  no build target: using presentation compiler with only scala-library
WARN  no build target: /home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala
WARN  no build target: /home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala
WARN  no build target: /home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala
INFO  shutting down Metals
INFO  time: initialize in 2.08s
INFO  skipping build import with status 'Requested'
WARN  no build target: /home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala
INFO  no build target: using presentation compiler with only scala-library
Nov 14, 2019 5:33:40 PM scala.meta.internal.pc.CompilerAccess retryWithCleanCompiler
INFO: compiler crashed due to an error in the Scala compiler, retrying with new compiler instance.
Nov 14, 2019 5:33:40 PM scala.meta.internal.pc.CompilerAccess handleError
SEVERE: null
java.lang.NullPointerException
	at scala.reflect.internal.Definitions$DefinitionsClass.isByNameParamType(Definitions.scala:417)
	at scala.reflect.internal.TreeInfo.isStableIdent(TreeInfo.scala:137)
	at scala.reflect.internal.TreeInfo.isStableIdentifier(TreeInfo.scala:113)
	at scala.reflect.internal.TreeInfo.isPath(TreeInfo.scala:102)
	at scala.reflect.internal.TreeInfo.admitsTypeSelection(TreeInfo.scala:155)
	at scala.tools.nsc.interactive.Global.stabilizedType(Global.scala:959)
	at scala.tools.nsc.interactive.Global.typedTreeAt(Global.scala:807)
	at scala.meta.internal.pc.SignatureHelpProvider.signatureHelp(SignatureHelpProvider.scala:22)

ERROR scalafmt: /home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala:40: error: } expected but end of file found

^
Nov 14, 2019 5:34:04 PM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 69
ERROR scalafmt: /home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala:40: error: } expected but end of file found

^
WARN  no build target: /home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala
WARN  no build target: /home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala
WARN  no build target: /home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala
WARN  no build target: /home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala
WARN  code navigation does not work for the file '/home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala' because it doesn't belong to a build target.
WARN  code navigation does not work for the file '/home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala' because it doesn't belong to a build target.
WARN  no build target: /home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala
WARN  no build target: /home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala
WARN  no build target: /home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala
WARN  code navigation does not work for the file '/home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala' because it doesn't belong to a build target.
WARN  code navigation does not work for the file '/home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala' because it doesn't belong to a build target.
WARN  no build target: /home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala
WARN  no build target: /home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala
WARN  no build target: /home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala
Nov 14, 2019 5:42:47 PM scala.meta.internal.pc.CompilerAccess handleError
SEVERE: null
java.lang.NullPointerException
	at scala.meta.internal.pc.HoverProvider.seenFromType(HoverProvider.scala:106)
	at scala.meta.internal.pc.HoverProvider.hover(HoverProvider.scala:42)

Nov 14, 2019 5:43:09 PM scala.meta.internal.pc.CompilerAccess handleError
SEVERE: null
java.lang.NullPointerException
	at scala.meta.internal.pc.HoverProvider.seenFromType(HoverProvider.scala:106)
	at scala.meta.internal.pc.HoverProvider.hover(HoverProvider.scala:42)

WARN  code navigation does not work for the file '/home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala' because it doesn't belong to a build target.
WARN  code navigation does not work for the file '/home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala' because it doesn't belong to a build target.
WARN  no build target: /home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala
WARN  no build target: /home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala
WARN  no build target: /home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala
WARN  no build target: /home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala
WARN  no build target: /home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala
WARN  no build target: /home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala
WARN  code navigation does not work for the file '/home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala' because it doesn't belong to a build target.
WARN  code navigation does not work for the file '/home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala' because it doesn't belong to a build target.
WARN  code navigation does not work for the file '/home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala' because it doesn't belong to a build target.
WARN  code navigation does not work for the file '/home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala' because it doesn't belong to a build target.
WARN  code navigation does not work for the file '/home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala' because it doesn't belong to a build target.
WARN  code navigation does not work for the file '/home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala' because it doesn't belong to a build target.
WARN  no build target: /home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala
WARN  no build target: /home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala
WARN  code navigation does not work for the file '/home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala' because it doesn't belong to a build target.
WARN  code navigation does not work for the file '/home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala' because it doesn't belong to a build target.
WARN  no build target: /home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala
WARN  no build target: /home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala
WARN  code navigation does not work for the file '/home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala' because it doesn't belong to a build target.
WARN  code navigation does not work for the file '/home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala' because it doesn't belong to a build target.
WARN  code navigation does not work for the file '/home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala' because it doesn't belong to a build target.
WARN  code navigation does not work for the file '/home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala' because it doesn't belong to a build target.
WARN  code navigation does not work for the file '/home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala' because it doesn't belong to a build target.
WARN  code navigation does not work for the file '/home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala' because it doesn't belong to a build target.
WARN  code navigation does not work for the file '/home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala' because it doesn't belong to a build target.
WARN  code navigation does not work for the file '/home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala' because it doesn't belong to a build target.
WARN  no build target: /home/criamon/tmp/play/moj-play/app/controllers/HomeController.scala
